--- a/src/css/style.css
+++ b/src/css/style.css
@@ -2,7 +2,7 @@
 header {
   background-color: black;
   display: flex;
-  justify-content: space-around; }
+  justify-content: space-evenly; }
   header ul {
     display: flex;
     list-style: none;
@@ -14,50 +14,59 @@ header {
       text-decoration: none;
       font-size: 1.1rem;
       font-family: cursive;
-      padding: 2.5rem; }
+      padding: 1.2rem; }
 
 ul li a:hover {
   color:   #ffcaaf; }
 
- /* header {
-    background-color: black;
-    grid-area: header;
-    display: flex; }
-    header ul {
-      display: flex;
-      list-style: none;
-      justify-content: center;
-      flex-direction: column;
-      padding-left: 5%; }
-      header ul li a {
-        color: #ffcaaf;
-        flex-direction: column;
-        text-decoration: none;
-        font-size: 1.1rem;
-        font-family: cursive;
-        padding: 0.5rem; }
-    header ul li a:hover {
-      color: #caa3ec; }
-  footer {
-    background-color: black;
-    grid-area: pie;
-    display: flex; }
-    footer ul {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      gap: 1rem; }
-      footer ul li a {
-        color: #ffcaaf;
-        font-size: 1.1rem;
-        font-family: cursive;
-        flex-direction: column; }
-  ul li a:hover {
-    color: #caa3ec; } }
-
-  */
-
   .carrito,.logo {
-padding-top:20px;
+    padding-top:20px;
   }
+  
+  .cardContainer {
+    background-color: #e4d0fd;
+    background-color: #81768b;
+    padding:3%;
+    display: flex;
+    justify-content:center;
+    flex-flow: row wrap;
+    width: 100%; }
 
+    .card {
+      display: flex;
+      flex-direction: column;
+      background-color: rgb(232, 241, 241);
+      padding: 3%;
+      margin: 50px; 
+      border:#302d2d;
+      border-radius: 10px;}
+
+    
+    .buttonProd {
+      display: flex;
+      justify-content: center;
+      background-color: #e0dbdb;
+      color: #302d2d;
+      margin-bottom: 1%;
+      font-size: 22px;
+      padding-top:3%;
+      padding-bottom: 3%;
+      margin-right: 15%;
+      margin-left: 15%;
+      margin-top:8%;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 18px;
+     
+     }
+
+     .cartPrice {
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around; }
+
+     .cartTitle{
+      display: flex;
+      flex-direction: row;
+      justify-content: space-around; }
