--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,5 +1,6 @@
 @charset "UTF-8";
 header {
+
   background-color: black;
   display: flex;
   flex-flow: row wrap;
@@ -26,14 +27,14 @@ ul li a:hover {
   }
   
   .cardContainer {
-    background-color: #81768b;
-    background-color: #d8d2df;
-    background-color: #dad7de;
-    padding:3%;
-    display: flex;
-    justify-content:center;
-    flex-flow: row wrap;
-    width: 100%; }
+      background-color: #81768b;
+      background-color: #d8d2df;
+      background-color: #dad7de;
+      padding:3%;
+      display: flex;
+      justify-content:center;
+      flex-flow: row wrap;
+      width: 100%; }
 
     .card {
       display: flex;
@@ -44,6 +45,22 @@ ul li a:hover {
       margin: 50px; 
       border:#302d2d;
       border-radius: 10px;}
+
+      .cardDetail {
+        display: flex;
+        flex-direction: row;
+        justify-content: ; 
+     
+        padding: 3%;
+        margin: 50px; 
+        border:#302d2d;
+        border-radius: 10px;}
+
+      .detailImage {
+    padding-right:10%;
+        }
+
+ 
 
     
     .buttonProd {
@@ -66,7 +83,25 @@ ul li a:hover {
      }
 
     
-*/
+     .buttonDetail {
+      display: flex;
+      justify-content: center;
+      flex-direction: row;
+      width: 100%;
+      margin-left:5%;
+      background-color: #e0dbdb;
+      color: #302d2d;
+      margin-bottom: 1%;
+      padding-top:3%;
+      padding-bottom: 3%;
+      margin-top:25%;
+      border: none;
+      border-radius: 10px;
+      cursor: pointer;
+      font-size: 18px;
+     
+     }
+
     .buttonCart2{
       display: flex;
       margin-left:30%;
@@ -83,3 +118,11 @@ ul li a:hover {
       display: flex;
       flex-direction: row;
       justify-content: space-around; }
+
+     .cartTitleDetail
+     {display: flex;
+      font-size:xx-large;
+      flex-direction: row;
+      justify-content: space-around;
+     }
+     
