web-joyas-Fontan - Cart Context 6

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -79,7 +79,10 @@ ul li a:hover {
      
      }
 
-    
+    .carrito {
+      cursor: pointer;
+    }
+
      .buttonDetail {
       display: flex;
       justify-content: center;
