web-joyas-Fontan - Cart Context 8

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -144,3 +144,9 @@ ul li a:hover {
       justify-content: space-around;
      }
      
+     .total{
+      color:violet;
+      font-size: larger;
+      padding-left:45%;
+
+     }
